# tdd-harness

./: .agent-metrics.json  .gitignore  .languages  .pre-commit-config.yaml  .pyrightconfig.json  .ruff-master-config.toml  LICENSE  README.md  coverage.md  pyproject.toml
.tdd-harness/prompts/: blue_phase_prompt.yaml  compression_prompt.yaml  post_mortem_prompt.yaml  red_phase_prompt.yaml  research_prompt.yaml  review_prompt.yaml
docs/: TODO.md  software-design-document.md  tools.md
docs/architecture-decisions/: adr-0002-multi-phase-tdd.md  adr-0003-progressive-tool-errors.md
docs/interfaces/: task-schema.md
docs/phases/: 01-amber-baseline-check.md  02-blue-structural-blueprint.md  03-red-test-generation.md  04-green-develop-implementation.md  05-magenta-coverage-guardrail.md  06-violet-review-and-signoff.md  07-cyan-research-subagent.md
docs/tasks/done/: 0001-coder.md  (+32 more)
scripts/: generate-unified-coverage.py  lint.sh
src/tdd_harness/: __init__.py  cli.py  config.py  context.py  controller.py  coverage_parser.py  exceptions.py  llm.py  mcp_client.py  phase.py  prompt.py  protocols.py  registry.py  runner.py  security.py  sub_agents.py  task_loader.py  tool_schemas.py  tracker.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_context.py  test_controller.py  test_coverage_parser.py  test_lcov_adapter.py  test_llm.py  test_mcp_client.py  test_prompt.py  test_pytest_adapter.py  test_registry.py  test_ruff_adapter.py  test_runner.py  test_security.py  test_sub_agents.py  test_task_loader.py  test_tool_schemas.py  test_tracker.py  test_utils.py
(+20 files in other folders)
